# svg-os

./: .gitignore  Cargo.toml  README.md  deploy-demos.sh  justfile  pnpm-lock.yaml
crates/svg-doc/: Cargo.toml
crates/svg-doc/src/: attr.rs  command.rs  document.rs  lib.rs  node.rs  parse.rs  serialize.rs  tag.rs  text.rs
crates/svg-effects/: Cargo.toml
crates/svg-effects/src/: lib.rs
crates/svg-geom/: Cargo.toml
crates/svg-geom/src/: lib.rs  path.rs  stroke.rs  transform.rs
crates/svg-graph-engine/: Cargo.toml
crates/svg-graph-engine/src/: events.rs  graph.rs  lib.rs  scheduler.rs  types.rs
crates/svg-layout/: Cargo.toml
crates/svg-layout/src/: connector.rs  graph_layout.rs  lib.rs
crates/svg-mcp/: Cargo.toml
crates/svg-mcp/src/: cli.rs  engine.rs  main.rs  tools.rs
crates/svg-render/: Cargo.toml
crates/svg-render/src/: lib.rs
crates/svg-runtime/: Cargo.toml
crates/svg-runtime/src/: ai_context.rs  binding.rs  diagram.rs  lib.rs  node_type.rs  template.rs  theme.rs
crates/svg-runtime/src/expr/: ast.rs  builtins.rs  eval.rs  lexer.rs  mod.rs  parser.rs  value.rs
crates/svg-store/: Cargo.toml
crates/svg-store/src/: lib.rs  schema.sql  store.rs
crates/svg-text/: Cargo.toml
crates/svg-text/src/: bidi.rs  emit.rs  hyphenate.rs  lib.rs  paragraph.rs
crates/svg-wasm/: Cargo.toml
crates/svg-wasm/src/: lib.rs
crates/svg-wasm/tests/: integration.rs
fixtures/: test-data.json  test-graph.json  test-theme.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: exec.rs  executors.rs  graph_commands.rs  main.rs  pty.rs
