[package]
name = "svg-os-desktop"
version = "0.1.0"
edition = "2021"
description = "SVG OS — Native Desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
log = "0.4"
async-trait = "0.1"

# Local crates
svg-graph-engine = { path = "../crates/svg-graph-engine" }
svg-store = { path = "../crates/svg-store" }
