[package]
name = "svg-doc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
svg-geom.workspace = true
forge-math.workspace = true
forge-core.workspace = true
uuid.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
