[package]
name = "svg-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "svg-mcp"
path = "src/main.rs"

[[bin]]
name = "svg-os"
path = "src/cli.rs"

[dependencies]
svg-doc.workspace = true
svg-runtime.workspace = true
svg-render.workspace = true
svg-text.workspace = true
svg-effects.workspace = true
svg-layout.workspace = true
forge-math.workspace = true
serde = { workspace = true }
serde_json.workspace = true
log.workspace = true
quick-xml.workspace = true
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.2"
