[package]
name = "svg-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite persistence layer for SVG OS graph state"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1"
svg-graph-engine = { path = "../svg-graph-engine" }
log = { workspace = true }
