[package]
name = "svg-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
svg-geom.workspace = true
svg-doc.workspace = true
svg-render.workspace = true
svg-text.workspace = true
svg-effects.workspace = true
svg-layout.workspace = true
svg-runtime.workspace = true
forge-math.workspace = true
forge-core.workspace = true
wasm-bindgen.workspace = true
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
log.workspace = true
uuid.workspace = true
quick-xml.workspace = true
